--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "author": {
     "name": "Mark Hennessy"
   },
-  "devDependencies": {},
-  "scripts": {}
+  "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-core": "^6.24.0",
+    "babel-preset-es2015": "^6.24.0"
+  },
+  "scripts": {
+    "build:proof": "babel src/main.js"
+  }
 }
