--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
-    "babel-preset-es2015": "^6.24.0"
+    "babel-jest": "^19.0.0",
+    "babel-preset-es2015": "^6.24.0",
+    "jest": "^19.0.2"
   },
   "scripts": {
+    "test": "jest",
+    "test:watch": "yarn test -- --watch",
+    "test:cov": "yarn test -- --coverage",
     "build:proof": "babel src/main.js"
   }
 }
