--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "jest",
     "test:watch": "yarn test -- --watch",
     "test:cov": "yarn test -- --coverage",
-    "build": "babel src --out-dir out",
+    "build": "yarn run clean:out && babel src --out-dir out",
     "docs": "yarn run clean:docs && yarn run jsdoc -- src -r -c jsdoc.conf.json -d docs"
   }
 }
