--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-jest": "^19.0.0",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
+    "documentation": "^4.0.0-beta.18",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-flowtype": "^2.30.4",
@@ -25,7 +26,6 @@
     "eslint-plugin-react": "^6.10.2",
     "flow-bin": "^0.42.0",
     "jest": "^19.0.2",
-    "jsdoc": "^3.4.3",
     "jsdoc-babel": "^0.3.0",
     "rimraf": "^2.6.1",
     "tslint": "^4.5.1",
@@ -40,11 +40,11 @@
     "flow": "flow",
     "eslint": "eslint src; exit 0",
     "eslint:changed": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --; exit 0",
-    "tslint": "tslint -c tslint.json src/**/*.ts; exit 0",
+    "tslint": "tslint --config tslint.json src/**/*.ts; exit 0",
     "test": "jest",
     "test:watch": "yarn test -- --watch",
     "test:cov": "yarn test -- --coverage",
     "build": "yarn run clean:out && babel src --out-dir out",
-    "docs": "yarn run clean:docs && yarn run jsdoc -- src -r -c jsdoc.conf.json -d docs --verbose"
+    "docs": "yarn run clean:docs && documentation build src/** --format html --output docs"
   }
 }
