--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "eslint": "eslint src; exit 0",
     "eslint:changed": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --; exit 0",
     "tslint": "tslint --config tslint.json src/**/*.ts; exit 0",
-    "test": "jest",
+    "test": "jest --config=jestconfig.json",
     "test:watch": "yarn test -- --watch",
     "test:cov": "yarn test -- --coverage",
     "build": "yarn run clean:out && babel src --out-dir out",
-    "docs:js": "yarn run clean:docs && documentation build src/** --format html --output docs",
-    "docs:ts": "yarn run clean:docs && typedoc src --out docs"
+    "docs:js": "yarn run clean:docs && documentation build src/**/flow/*.js --format html --output docs",
+    "docs:ts": "yarn run clean:docs && typedoc src/**/typescript/*.ts --out docs"
   }
 }
