--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES3",
     "module": "commonjs",
     "noImplicitAny": true,
     "removeComments": false,
