--- a/jestconfig.json
+++ b/jestconfig.json
@@ -4,6 +4,21 @@
     "/out/"
   ],
   "collectCoverageFrom": [
-    "src/**/*.js"
+    "src/**/*.js",
+    "!**/__tests__/**",
+    "!**/node_modules/**"
+  ],
+  "moduleDirectories": [
+    "node_modules",
+    "<rootDir>/src"
+  ],
+  "transform": {
+    "^.+\\.jsx?$": "babel-jest"
+  },
+  "testRegex": "(/__tests__/.*|\\-(test|spec)|\\.(test|spec))\\.(ts|tsx|js)$",
+  "moduleFileExtensions": [
+    "ts",
+    "tsx",
+    "js"
   ]
 }
