--- a/jestconfig.json
+++ b/jestconfig.json
@@ -4,7 +4,7 @@
     "/out/"
   ],
   "collectCoverageFrom": [
-    "src/**/*.js",
+    "src/jest_unit_testing/**/*.js",
     "!**/__tests__/**",
     "!**/node_modules/**"
   ],
