--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,11 @@
 {
   "presets": [
-    "es2015"
+    [
+      "es2015",
+      {
+        "loose": true
+      }
+    ]
   ],
   "plugins": [
     "transform-flow-strip-types"
