--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
-    "babel-jest": "^19.0.0",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
+    "babel-preset-react": "^6.23.0",
     "documentation": "^4.0.0-beta.18",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
@@ -33,11 +33,13 @@
     "tslint": "^4.5.1",
     "tslint-config-airbnb": "^1.1.1",
     "typedoc": "^0.5.9",
-    "typescript": "^2.2.1"
+    "typescript": "^2.2.1",
+    "webpack": "^2.3.2"
   },
   "scripts": {
-    "clean": "yarn run clean:out && yarn run clean:cov && yarn run clean:docs",
+    "clean": "yarn run clean:out && yarn run clean:bin && yarn run clean:cov && yarn run clean:docs",
     "clean:out": "rimraf out",
+    "clean:bin": "rimraf bin",
     "clean:cov": "rimraf coverage",
     "clean:docs": "rimraf docs",
     "flow": "flow; exit 0",
@@ -47,8 +49,12 @@
     "test": "jest --config=jestconfig.json",
     "test:watch": "yarn test -- --watch",
     "test:cov": "yarn test -- --coverage; exit 0",
-    "build": "yarn run clean:out && babel src --out-dir out",
+    "babel": "yarn run clean:out && babel src --out-dir out",
+    "webpack": "yarn run clean:bin && webpack --config webpack.config.js; exit 0",
     "docs:js": "yarn run clean:docs && documentation build src/**/flow/*.js --format html --output docs",
     "docs:ts": "yarn run clean:docs && typedoc src/**/typescript/*.ts --out docs"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0"
   }
 }
