--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "test": "jest --config=jestconfig.json",
     "test:watch": "yarn test -- --watch",
     "test:cov": "yarn test -- --coverage; exit 0",
-    "babel": "yarn run clean:out && babel src --out-dir out",
+    "babel": "yarn run clean:out && babel src --out-dir out; exit 0",
     "webpack": "yarn run clean:bin && webpack --config webpack.config.js; exit 0",
     "docs:js": "yarn run clean:docs && documentation build src/**/flow/*.js --format html --output docs",
     "docs:ts": "yarn run clean:docs && typedoc src/**/typescript/*.ts --out docs"
