Added flow stop script

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "clean:bin": "rimraf bin",
     "clean:cov": "rimraf coverage",
     "clean:docs": "rimraf docs",
-    "flow": "flow; exit 0",
+    "flow:start": "flow; exit 0",
+    "flow:stop": "flow stop",
     "eslint": "eslint src; exit 0",
     "eslint:changed": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --; exit 0",
     "tslint": "tslint --config tslint.json src/**/*.ts; exit 0",
