--- a/package.json
+++ b/package.json
@@ -41,9 +41,8 @@
     "webpack": "^2.3.2"
   },
   "scripts": {
-    "clean": "npm run clean:out && npm run clean:bin && npm run clean:cov && npm run clean:docs",
+    "clean": "npm run clean:out && npm run clean:cov && npm run clean:docs",
     "clean:out": "rimraf out",
-    "clean:bin": "rimraf bin",
     "clean:cov": "rimraf coverage",
     "clean:docs": "rimraf docs",
     "flow:start": "flow; exit 0",
@@ -54,10 +53,10 @@
     "test": "jest --config=jestconfig.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage; exit 0",
-    "babel": "npm run clean:out && babel src --out-dir out; exit 0",
-    "webpack": "npm run clean:bin && webpack --config webpack.config.js; exit 0",
-    "docs:js": "npm run clean:docs && documentation build src/**/flow/*.js --format html --output docs",
-    "docs:ts": "npm run clean:docs && typedoc src/**/typescript/*.ts --out docs"
+    "babel": "babel src --out-dir out/babel; exit 0",
+    "webpack": "webpack --config webpack.config.js; exit 0",
+    "docs:js": "documentation build src/**/flow/*.js --format html --output docs/js",
+    "docs:ts": "typedoc src/**/typescript/*.ts --out docs/ts"
   },
   "author": "Mark Hennessy <mhennessy116@gmail.com>",
   "license": "MIT"
