--- a/.babelrc
+++ b/.babelrc
@@ -3,9 +3,13 @@
     [
       "es2015",
       {
-        "loose": true
+        "loose": true,
+        "modules": false
       }
     ],
     "react"
+  ],
+  "plugins": [
+    "external-helpers"
   ]
 }
