--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "documentation": "^4.0.0-beta.18",
@@ -34,6 +35,8 @@
     "jest": "^19.0.2",
     "jsdoc-babel": "^0.3.0",
     "rimraf": "^2.6.1",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babel": "^2.7.1",
     "tslint": "^4.5.1",
     "tslint-config-airbnb": "^1.1.1",
     "typedoc": "^0.5.9",
@@ -55,6 +58,7 @@
     "test:cov": "npm test -- --coverage; exit 0",
     "babel": "babel src --out-dir out/babel; exit 0",
     "webpack": "webpack --config webpack.config.js; exit 0",
+    "rollup": "rollup -c; exit 0",
     "docs:js": "documentation build src/**/flow/*.js --format html --output docs/js",
     "docs:ts": "typedoc src/**/typescript/*.ts --out docs/ts"
   },
