--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "test:cov": "npm test -- --coverage; exit 0",
     "babel": "babel src --out-dir out/babel; exit 0",
     "webpack": "webpack --config webpack.config.js; exit 0",
+    "webpack:binary": "webpack --config webpack.binary.config.js; exit 0",
     "rollup": "rollup -c; exit 0",
     "docs:js": "documentation build src/**/flow/*.js --format html --output docs/js",
     "docs:ts": "typedoc src/**/typescript/*.ts --out docs/ts"
