Created separate tasks for rollup and rollup with uglifier

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "rimraf": "^2.6.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-uglify": "^1.0.1",
     "tslint": "^4.5.1",
     "tslint-config-airbnb": "^1.1.1",
     "typedoc": "^0.5.9",
@@ -53,13 +54,14 @@
     "eslint": "eslint src; exit 0",
     "eslint:changed": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --; exit 0",
     "tslint": "tslint --config tslint.json src/**/*.ts; exit 0",
-    "test": "jest --config=jestconfig.json",
+    "test": "jest --config config/jestconfig.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage; exit 0",
     "babel": "babel src --out-dir out/babel; exit 0",
-    "webpack": "webpack --config webpack.config.js; exit 0",
-    "webpack:binary": "webpack --config webpack.binary.config.js; exit 0",
-    "rollup": "rollup -c; exit 0",
+    "webpack": "webpack --config config/webpack.config.js; exit 0",
+    "webpack:binary": "webpack --config config/webpack.binary.config.js; exit 0",
+    "rollup": "rollup --config config/rollup.config.js; exit 0",
+    "rollup:binary": "rollup --config config/rollup.binary.config.js; exit 0",
     "docs:js": "documentation build src/**/flow/*.js --format html --output docs/js",
     "docs:ts": "typedoc src/**/typescript/*.ts --out docs/ts"
   },
