Moved tslint.json to config folder

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "flow:stop": "flow stop",
     "eslint": "eslint src; exit 0",
     "eslint:changed": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --; exit 0",
-    "tslint": "tslint --config tslint.json src/**/*.ts; exit 0",
+    "tslint": "tslint --config config/tslint.json src/**/*.ts; exit 0",
     "test": "jest --config config/jestconfig.json",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage; exit 0",
