Created file for shared config and renamed directories some more

--- a/package.json
+++ b/package.json
@@ -58,8 +58,8 @@
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage; exit 0",
     "babel": "babel src --out-dir out/babel; exit 0",
-    "webpack": "webpack --config config/webpack.config.js; exit 0",
-    "webpack:binary": "webpack --config config/webpack.binary.config.js; exit 0",
+    "webpack": "webpack --config config/webpack.config.babel.js; exit 0",
+    "webpack:binary": "webpack --config config/webpack.binary.config.babel.js; exit 0",
     "rollup": "BABEL_ENV=rollup rollup --config config/rollup.config.js; exit 0",
     "rollup:binary": "BABEL_ENV=rollup rollup --config config/rollup.binary.config.js; exit 0",
     "docs:js": "documentation build src/**/flow/*.js --format html --output docs/js",
