--- a/config/jestconfig.json
+++ b/config/jestconfig.json
@@ -4,7 +4,7 @@
     "/out/"
   ],
   "collectCoverageFrom": [
-    "src/jest_examples/**/*.js",
+    "src/jest-examples/**/*.js",
     "!**/__tests__/**",
     "!**/node_modules/**"
   ],
