Added es6 build targets for webpack and rollup

--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "flow-bin": "^0.42.0",
     "jest": "^19.0.2",
     "jsdoc-babel": "^0.3.0",
+    "remove-flow-types-loader": "^1.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
+    "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
     "tslint": "^4.5.1",
     "tslint-config-airbnb": "^1.1.1",
@@ -58,10 +60,12 @@
     "test:watch": "npm test -- --watch",
     "test:cov": "npm test -- --coverage; exit 0",
     "babel": "babel src --out-dir out/babel; exit 0",
-    "webpack": "webpack --config config/webpack.config.babel.js; exit 0",
-    "webpack:binary": "webpack --config config/webpack.binary.config.babel.js; exit 0",
-    "rollup": "BABEL_ENV=rollup rollup --config config/rollup.config.js; exit 0",
-    "rollup:binary": "BABEL_ENV=rollup rollup --config config/rollup.binary.config.js; exit 0",
+    "webpack:es5": "webpack --config config/webpack.es5.config.babel.js; exit 0",
+    "webpack:es5:binary": "webpack --config config/webpack.es5.binary.config.babel.js; exit 0",
+    "webpack:es6": "webpack --config config/webpack.es6.config.babel.js; exit 0",
+    "rollup:es5": "BABEL_ENV=rollup rollup --config config/rollup.es5.config.js; exit 0",
+    "rollup:es5:binary": "BABEL_ENV=rollup rollup --config config/rollup.es5.binary.config.js; exit 0",
+    "rollup:es6": "BABEL_ENV=rollup rollup --config config/rollup.es6.config.js; exit 0",
     "docs:js": "documentation build src/**/flow/*.js --format html --output docs/js",
     "docs:ts": "typedoc src/**/typescript/*.ts --out docs/ts"
   },
