--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "commonjs",
+    "strictNullChecks": true,
     "sourceMap": true,
     "watch": true,
     "removeComments": false,
