--- a/jestconfig.json
+++ b/jestconfig.json
@@ -10,7 +10,7 @@
     ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
   },
   "testResultsProcessor": "<rootDir>/node_modules/ts-jest/coverageprocessor.js",
-  "testRegex": "(/__tests__/.*)\\.(ts|tsx|js)$",
+  "testRegex": "(/typescript/__tests__/.*)\\.(ts|tsx)$|(/flow/__tests__/.*)\\.(js)$",
   "testPathIgnorePatterns": [
     "/out/"
   ],
