--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,20 @@
 # A leading slash matches the root directory.
 # A trailing slash ensures that only directories are matched and not files.
 
-# Ignore OS/filesystem metadata files
+# OS/filesystem metadata files
 .DS_Store
 
-# Ignore IDE metadata files
+# IDE and user specific files
 .idea/
 *.iml
 .vscode/
 
-# Ignore npm directories and related log files
+# NPM directories and related log files
 node_modules/
 npm-debug.log
 yarn-error.log
 
-# Ignore generated build directories
+# Generated build directories
 /bin/
 /out/
 /coverage/
@@ -23,8 +23,8 @@ yarn-error.log
 # Exclude typescript output js files
 **/typescript/**/*.js
 
-# Ignore generated source map files
+# Generated source map files
 *.js.map
 
-# Ignore SonarQube scanner cache directory
+# SonarQube directories
 .scannerwork/
