--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,14 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "ES6",
-    "strictNullChecks": true,
-    "sourceMap": true,
-    "watch": true,
-    "removeComments": false,
-    "noImplicitAny": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "noEmitOnError": true,
+    "removeComments": true,
+    "forceConsistentCasingInFileNames": true,
     "suppressImplicitAnyIndexErrors": true,
-    "preserveConstEnums": true
+    "watch": true,
+    "sourceMap": true
   },
   "include": [
     "src/**/*"
