--- a/package.json
+++ b/package.json
@@ -19,21 +19,21 @@
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
-    "babel-jest": "^19.0.0",
-    "babel-loader": "^6.4.1",
+    "babel-jest": "^20.0.3",
+    "babel-loader": "^7.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "documentation": "^4.0.0-beta.18",
     "eslint": "^3.18.0",
-    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.2",
-    "flow-bin": "^0.42.0",
-    "jest": "^19.0.2",
+    "eslint-plugin-jest": "^20.0.3",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "flow-bin": "^0.46.0",
+    "jest": "^20.0.3",
     "jsdoc-babel": "^0.3.0",
     "remove-flow-types-loader": "^1.0.0",
     "rimraf": "^2.6.1",
@@ -41,10 +41,11 @@
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-uglify": "^1.0.1",
-    "ts-jest": "^19.0.13",
-    "tslint": "^4.5.1",
-    "tslint-config-airbnb": "^1.1.1",
-    "typedoc": "^0.5.9",
+    "ts-jest": "^20.0.3",
+    "tslint": "^5.2.0",
+    "tslint-config-airbnb": "^5.0.1",
+    "tsutils": "^1.6.0",
+    "typedoc": "^0.7.0",
     "typescript": "^2.2.1",
     "webpack": "^2.3.2"
   },
