Fixed ts-jest  sourcemaps integration

--- a/.babelrc
+++ b/.babelrc
@@ -22,7 +22,8 @@
           }
         ],
         "react"
-      ]
+      ],
+      "sourceMaps": "inline"
     },
     "rollup": {
       "presets": [
