--- a/jestconfig.json
+++ b/jestconfig.json
@@ -7,6 +7,7 @@
     }
   },
   "transform": {
+    "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
     ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
   },
   "setupTestFrameworkScriptFile": "<rootDir>/beforeTest.js",
@@ -41,5 +42,5 @@
     }
   },
   "mapCoverage": true,
-  "verbose": true
+  "verbose": false
 }
