--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-flow": "^1.1.1",
-    "rollup-plugin-uglify": "^1.0.1",
+    "rollup-plugin-uglify": "^2.0.1",
     "ts-jest": "^20.0.3",
     "tslint": "^5.2.0",
     "tslint-config-airbnb": "^5.0.1",
-    "tsutils": "^1.6.0",
+    "tsutils": "1.6.0",
     "typedoc": "^0.7.0",
     "typescript": "^2.2.1",
     "webpack": "^2.3.2"
