updated config some more to try and get IntelliJ debugging to sync with sourcemaps

--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
           }
         ],
         "react"
-      ]
+      ],
+      "sourceMaps": "inline"
     },
     "test": {
       "presets": [
