--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.24.1",
     "documentation": "^4.0.0-beta.18",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^15.0.1",
