--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint": "eslint src; exit 0",
     "eslint:changed": "git diff --name-only --diff-filter=ACMRTUB `git merge-base HEAD master` | grep '\\.js$' | xargs eslint --; exit 0",
     "tslint": "tslint --config tslint.js src/**/*.ts; exit 0",
-    "test": "jest --coverage --no-cache",
+    "test": "jest --config jestconfig.json --coverage --no-cache",
     "babel": "babel src --out-dir build/babel; exit 0",
     "webpack:es5": "webpack --config config/webpack.es5.config.babel.js; exit 0",
     "webpack:es5:binary": "webpack --config config/webpack.es5.binary.config.babel.js; exit 0",
@@ -34,8 +34,8 @@
     "babel-polyfill": "^6.23.0"
   },
   "devDependencies": {
-    "@types/jest": "^19.2.2",
-    "@types/node": "^7.0.12",
+    "@types/jest": "^20.0.8",
+    "@types/node": "^8.0.26",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-eslint": "^7.2.1",
@@ -45,30 +45,30 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "documentation": "^4.0.0-beta.18",
-    "eslint": "^3.18.0",
+    "documentation": "^5.2.2",
+    "eslint": "^4.5.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jest": "^20.0.3",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.0.1",
-    "flow-bin": "^0.46.0",
+    "flow-bin": "^0.54.0",
     "jest": "^20.0.3",
     "jsdoc-babel": "^0.3.0",
     "remove-flow-types-loader": "^1.0.0",
     "rimraf": "^2.6.1",
-    "rollup": "^0.41.6",
-    "rollup-plugin-babel": "^2.7.1",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-flow": "^1.1.1",
     "rollup-plugin-uglify": "^2.0.1",
     "ts-jest": "^20.0.3",
     "tslint": "^5.2.0",
     "tslint-config-airbnb": "^5.0.1",
     "tsutils": "1.6.0",
-    "typedoc": "^0.7.0",
+    "typedoc": "^0.8.0",
     "typescript": "^2.2.1",
-    "webpack": "^2.3.2"
+    "webpack": "^3.5.5"
   },
   "author": "Mark Hennessy <mhennessy116@gmail.com>",
   "license": "MIT"
